--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "TwitchLib.EventSub.Websockets"]
 	path = TwitchLib.EventSub.Websockets
 	url = https://github.com/TwitchLib/TwitchLib.EventSub.Websockets.git
+[submodule "TwitchLib.Communication"]
+	path = TwitchLib.Communication
+	url = https://github.com/TwitchLib/TwitchLib.Communication
